# SensorCalibration

./: .gitignore
camera_intrinsic/calib_verification/: CMakeLists.txt
camera_intrinsic/intrinsic_calib/: CMakeLists.txt
lidar2camera/auto_calib_v2.0/: CMakeLists.txt
lidar2imu/auto_calib/: CMakeLists.txt  refined_calib_imu_to_lidar.txt
lidar2imu/auto_calib/src/: calibration.cpp
lidar2imu/manual_calib/: CMakeLists.txt
lidar2lidar/auto_calib/: CMakeLists.txt  calibration_results.json  calibration_results.txt  extrinsics.json  extrinsics_vehicle.py  helios_front_bp_front.json  helios_front_helios_rear.json  helios_front_helios_rear_0508.json  initial_extrinsics.py  intrinsics.json  lidar_relative_extrinsics_rpy_target_source.json  output.json
lidar2lidar/auto_calib/include/: calibration.hpp
lidar2lidar/auto_calib/src/: calibration.cpp  registration_icp.cpp  run_lidar2lidar copy.cpp  run_lidar2lidar.cpp  run_lidar2lidar_ori.cpp
lidar2lidar/manual_calib/: CMakeLists.txt  helios_front_bp_front.txt  lidar2lidar_extrinsic_0.txt  lidar2lidar_extrinsic_1.txt  lidar2lidar_extrinsic_3.txt  lidar2lidar_extrinsic_4.txt  lidar2lidar_extrinsic_helios_front_bp_front.txt  lidar2lidar_extrinsic_helios_rear_bp_rear.json  lidar2lidar_extrinsic_helios_rear_bp_rear.txt  ori.txt  test.md
lidar2lidar/manual_calib/data/: helios_rear_bp_rear.json  p64-to-qt-extrinsic.json
lidar2lidar/manual_calib/scripts/002/: helios_left_front_helios_rear_right.sh
lidar2lidar/manual_calib/src/: run_lidar2lidar copy 2.cpp  run_lidar2lidar copy.cpp  run_lidar2lidar.cpp
(+13 files in other folders)
